implement email verification, password reset, and related endpoints; enhance user registration with email confirmation; add email service integration; update tests and documentation accordingly